@@ -30,6 +30,8 @@ changes relative to sbcl-1.3.14:
   * bug fix: correctly handle the case of a non-local exit within a function
     terminating the extent of dynamic-extent, dynamic-bound variables in the
     presence of multiple-values (lp#1655011)
+  * bug fix: handling of SB-SYS:WITH-PINNED-OBJECTS in the interpreters (both
+    sb-eval and sb-fasteval) now actually pins objects on gencgc.
 
 changes in sbcl-1.3.14 relative to sbcl-1.3.13:
   * minor incompatible change: the SB-PCL walker no longer recognizes
